# a_first_memory

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  RESEARCH_README.md  pyproject.toml  results.json
docs/: GRPO_RESEARCH_READINESS.md  MODAL_TRAINING.md  NSD_GETTING_STARTED.md  NSD_PAYLOAD_FORMAT.md
outputs/: results.json
outputs/cli_surface_smoke/: results.json
outputs/grpo_research_ready_smoke/: results.json
outputs/grpo_research_ready_smoke_v2/: results.json
outputs/should_fail_missing_nsd_path/: results.json
outputs_audit_nsd/: results.json
outputs_audit_synth/: results.json
outputs_devcheck/: results.json
outputs_devcheck2/: results.json
scripts/: __init__.py  backfill_wandb_from_results.py  build_feature_bank.py  build_nsd_payload.py  check_nsd_modal_readiness.py  download_nsd_from_aws.sh  ingest_nsd_layout.py  modal_app.py  modal_prepare_nsd_payload.py  run_pipeline.py  verify_grpo.py
src/a_first_memory/: __init__.py  config.py  pipeline.py
src/a_first_memory/data/: nsd.py  nsd_layout.py  payload.py  synthetic.py
src/a_first_memory/eval/: __init__.py  baselines.py  behavior.py  encoding.py  family_shift.py  feature_quality.py  rsa.py
src/a_first_memory/features/: __init__.py  adapters.py  build.py
src/a_first_memory/models/: schema.py
src/a_first_memory/rl/: __init__.py  (+3 more)
src/scripts/: __init__.py  verify_grpo.py
tests/: test_feature_bank_builder.py  test_grpo_verifier.py  test_nsd_feature_override.py  test_nsd_layout_ingest.py  test_nsd_loader.py  test_nsd_raw_dir_loader.py  test_payload_validation.py  test_pipeline_smoke.py
(+2 files in other folders)
