[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-first-memory"
version = "0.1.0"
description = "Reward-constrained visual memory selection research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
wandb = [
  "wandb>=0.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
